# osprey

./: README.md  pyproject.toml
data/: onehot_labels.csv  onehot_labels.json  perch_classes.csv
envs/: schmichigan.yaml
notebooks/: fit-cnn.ipynb  fit-efficientnet-b0-spec.ipynb  fit-efficientnet-b0-wave.ipynb  fit-efficientnet-b0.ipynb  fit-simple-cnn.ipynb  fit-spec-v2.ipynb  fit-spec.ipynb  fit-v1.ipynb  fit-wave.ipynb  infer-spec.ipynb  precompute.ipynb
osprey/: __init__.py  augment.py  dataset.py  models.py  utilities.py
scripts/: build_onehot_labels.py  build_spectrogram_metadata.py  expand_time_slices.py  fit-model-defaults.sh  fit-model.sh  generate_colored_noise_dataset.py  precompute-mel.sh  split_train_validate_test.py  subset_csv_by_labels.py
